# agent-table-brief

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: cloud-implementation-plan.md
openspec/: config.yaml  project.md
openspec/changes/archive/2026-03-09-v02-compare-and-confidence/: proposal.md  tasks.md
openspec/changes/archive/2026-03-09-v04-agent-infrastructure/: design.md  proposal.md  tasks.md
openspec/changes/v02-compare-and-confidence/: design.md
openspec/changes/v02-compare-and-confidence/specs/repo-scan/: spec.md
openspec/changes/v02-compare-and-confidence/specs/table-compare/: spec.md
openspec/specs/agent-discovery/: spec.md
openspec/specs/catalog-export/: spec.md
openspec/specs/column-metadata/: spec.md
openspec/specs/join-paths/: spec.md
openspec/specs/live-enrichment/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/repo-scan/: spec.md
openspec/specs/table-briefs/: spec.md
openspec/specs/table-compare/: spec.md
openspec/specs/table-search/: spec.md
src/agent_table_brief/: __main__.py  cli.py  init_cmd.py  mcp_server.py  models.py  render.py  repository.py  storage.py
tests/: test_cli.py  test_mcp_server.py  test_repository.py
tests/fixtures/dbt_project/: dbt_project.yml
tests/fixtures/monorepo_with_dbt/: root_query.sql
tests/fixtures/monorepo_with_dbt/analytics/: dbt_project.yml
tests/fixtures/multi_dbt_monorepo/analytics_a/: dbt_project.yml
tests/fixtures/multi_dbt_monorepo/analytics_b/: dbt_project.yml
tests/fixtures/sql_repo/dashboards/: weekly_orders.sql
tests/fixtures/sql_repo/marts/: orders_by_day.sql  orders_by_day_all.sql
tests/fixtures/sql_repo/metadata/: models.yml
tests/fixtures/sql_repo/staging/: raw_orders.sql
(+16 files in other folders)
