[project]
name = "agent-table-brief"
version = "0.1.0"
description = "Turn analytics codebases into compact table briefs that coding agents can actually use."
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
keywords = ["dbt", "sql", "analytics", "cli", "catalog", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.11.0",
    "PyYAML>=6.0.0",
    "sqlglot>=29.0.0",
    "typer>=0.16.0",
]

[project.scripts]
agent-table-brief = "agent_table_brief.cli:main"
tablebrief = "agent_table_brief.cli:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/weiminglong/agent-table-brief"
Repository = "https://github.com/weiminglong/agent-table-brief"
Issues = "https://github.com/weiminglong/agent-table-brief/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[dependency-groups]
dev = [
    "mypy>=1.18.0",
    "pytest>=8.4.0",
    "ruff>=0.13.0",
    "types-PyYAML>=6.0.12.20250915",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["agent_table_brief"]

[[tool.mypy.overrides]]
module = "agent_table_brief.mcp_server"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true
